[package]
name = "logban"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/potoo0/logban"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console-subscriber = "0.5.0"
futures = "0.3"
humantime-serde = "1.1.1"
inotify = "0.11.0"
ipnet = { version = "2", features = ["serde"] }
regex = "1"
sdjournal = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["default", "sqlite", "runtime-tokio", "ipnet"] }
thiserror = "2"
time = { version = "0.3.46", features = ["local-offset"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml_serde = "0.10"

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "9.1.0", features = ["build", "cargo"] }

[dev-dependencies]
tempfile = "3"
